--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <maven.compiler.target>1.8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <spring.boot.version>2.0.1.RELEASE</spring.boot.version>
+        <start-class>am.work.shop.Application</start-class>
     </properties>
 
     <dependencies>
@@ -181,6 +182,19 @@
                     <version>${spring.boot.version}</version>
                     <configuration>
                         <addResources>true</addResources>
+                        <mainClass>am.work.shop.Application</mainClass>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-jar-plugin</artifactId>
+                    <version>2.4</version>
+                    <configuration>
+                        <archive>
+                            <manifest>
+                                <mainClass>am.work.shop.Application</mainClass>
+                            </manifest>
+                        </archive>
                     </configuration>
                 </plugin>
             </plugins>
